JumpScript/tests/baselines/reference/parserInterfaceDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.jump(1,13): error TS1176: Interface declaration cannot have 'implements' clause.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.jump (1 errors) ====
    interface I implements A {
                ~~~~~~~~~~
!!! error TS1176: Interface declaration cannot have 'implements' clause.
    }